<resources>
    <string name="app_name">My Application</string>
    <string name="signIn">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="seven">7</string>
    <string name="clear">Clear</string>
    <string name="backspace">BS</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiplication">x</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="decimal_point">.</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="signUp">sign up</string>
    <string name="email">Email</string>
    <string name="enterPassword">Enter Password</string>
    <string name="logout">Logout</string>
    <string name="history">History</string>
    <string name="calculation_history">Calculation History</string>
</resources>