<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/logout" />

        <Button
            android:id="@+id/btnHistory"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/history" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtSolution"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="end"
        android:paddingTop="5sp"
        android:paddingRight="10sp"
        android:textSize="15pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="end"
        android:paddingTop="5sp"
        android:paddingRight="10sp"
        android:textSize="15pt"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/clear"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/backspace"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow>

                <Button
                    android:id="@+id/btnSeven"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/seven"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnEight"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/eight"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnNine"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/nine"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/divide"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btnFour"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/four"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnFive"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/five"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnSix"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/six"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnMultiply"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/multiplication"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btnOne"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/one"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnTwo"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/two"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnThree"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/three"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnSubtract"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/minus"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btnDecimal"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/decimal_point"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnZero"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/zero"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnEquals"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/equal"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/payne_gray"
                    android:text="@string/plus"
                    android:textColor="@color/silver"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>
