<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textAlert"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAlert"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/signUp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTxtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="15dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTxtUsername"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="15dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/editTxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/editTxtEmail"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="15dp"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/editTxtEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/editTxtPassword"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="15dp"
        android:hint="@string/enterPassword" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@id/editTxtEnterPassword"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/signUp" />

</RelativeLayout>