<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardview_shadow_start_color"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textAlert"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAlert"
        android:layout_marginTop="129dp"
        android:gravity="center"
        android:text="@string/signIn"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTxtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:autofillHints=""
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editTxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/editTxtUsername"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editTxtPassword"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/login" />

</RelativeLayout>